Added updated dockerfile for jenkins